--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             >Web<span class="logo-color">Studio</span></a
           >
           <ul class="header-list list">
-            <li class="header-iten">
+            <li class="header-iten ">
               <a class="header-link link current" href="">Студія</a>
             </li>
             <li class="header-iten">
@@ -63,7 +63,7 @@
       <section class="hero">
         <div class="container ">
           <h1 class="hero-text">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ <br />ВАШОГО БІЗНЕСУ</h1>
-          <button class="hero-botton" type="button">Замовити послугу</button>
+          <button class="hero-botton" data-modal-open type="button">Замовити послугу</button>
         </div>
       </section>
       <section class="peculiarities">
@@ -467,5 +467,15 @@
         </div>
       </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal" >
+       <button type="button" data-modal-close class="modal-btn">
+        <svg class="modal-close-icon">
+          <use href="./images/symbol-defs.svg#icon-Vector"  ></use>
+        </svg>
+       </button> 
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
